fix(ci): 添加 pytest-asyncio 到 CI 依赖
Python 3.13 环境中需要显式安装 pytest-asyncio

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install dependencies
         run: |
           uv sync
-          uv pip install pytest-cov
+          uv pip install pytest-cov pytest-asyncio
 
       - name: Run tests with coverage
         run: |
