fix: 修复 Dispatch workflow 的 labels JSON 格式问题
问题：
- GitHub Actions 无法解析多行 JSON 格式的 labels
- 错误: Invalid format '  "type:paper",'

解决方案：
- 使用 tr 命令将 JSON 转换为单行格式
- 移除换行符和空格: tr -d '\n' | tr -d ' '

相关 workflow: dispatch_agents.yml

--- a/.github/workflows/dispatch_agents.yml
+++ b/.github/workflows/dispatch_agents.yml
@@ -46,7 +46,8 @@ jobs:
       - name: Get labels
         id: labels
         run: |
-          labels='${{ toJson(github.event.issue.labels.*.name) }}'
+          # 将 JSON 转换为单行格式
+          labels=$(echo '${{ toJson(github.event.issue.labels.*.name) }}' | tr -d '\n' | tr -d ' ')
           echo "labels=$labels" >> $GITHUB_OUTPUT
 
       - name: Dispatch to user repositories
