fix: 修复 Dispatch workflow JSON 引号传递问题
- 使用单引号包裹 GitHub Actions 输出变量以保留 JSON 格式
- 避免 bash 解析时丢失引号导致的 Invalid JSON 错误

--- a/.github/workflows/dispatch_agents.yml
+++ b/.github/workflows/dispatch_agents.yml
@@ -54,7 +54,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          mentions="${{ steps.parse_issue.outputs.mentions || steps.parse_comment.outputs.mentions }}"
+          # 使用单引号包裹 JSON 以避免 bash 解析问题
+          mentions='${{ steps.parse_issue.outputs.mentions || steps.parse_comment.outputs.mentions }}'
 
           if [ -z "$mentions" ] || [ "$mentions" = "[]" ]; then
             echo "No mentions found, skipping dispatch"
