--- a/.github/workflows/orchestrator.yml
+++ b/.github/workflows/orchestrator.yml
@@ -178,6 +178,9 @@ jobs:
           ISSUE_TITLE=$(cat /tmp/issue_title.txt)
           COMMENTS=$(cat /tmp/comments.txt)
 
+          # 创建日志目录
+          mkdir -p ${{ github.workspace }}/logs
+
           uv run python -m issuelab execute \
             --issue ${{ github.event.issue.number }} \
             --agents "${{ steps.parse.outputs.mentions }}" \
@@ -185,15 +188,32 @@ jobs:
             --title "$ISSUE_TITLE" \
             --comments "$COMMENTS" \
             --comment-count "${{ steps.get_comments.outputs.comment_count }}" \
-            --post
+            --post || {
+              echo "❌ Agent 执行失败"
+              if [ -f "$LOG_FILE" ]; then
+                echo "=== 错误日志 ==="
+                tail -100 "$LOG_FILE"
+              fi
+              exit 1
+            }
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ANTHROPIC_AUTH_KEY: ${{ secrets.ANTHROPIC_AUTH_KEY }}
           ANTHROPIC_BASE_URL: ${{ secrets.ANTHROPIC_BASE_URL }}
           ANTHROPIC_MODEL: ${{ secrets.ANTHROPIC_MODEL }}
           ARXIV_STORAGE_PATH: ${{ github.workspace }}/.arxiv-papers
+          LOG_FILE: ${{ github.workspace }}/logs/execute_${{ github.event.issue.number }}.log
+          LOG_LEVEL: DEBUG
           ENABLE_ARXIV_MCP: true  # 已修复 MCP 超时问题
           ENABLE_GITHUB_MCP: false  # 暂时关闭以测试性能
+
+      - name: Upload logs
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: agent-logs-${{ github.event.issue.number }}-${{ github.run_number }}
+          path: ${{ github.workspace }}/logs/
+          retention-days: 7
 
   # ========== /command 触发（顺序执行） ==========
   process-command:
