fix: remove erroneous return decorator statement

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ dependencies = [
     "claude-agent-sdk>=0.1.27",
     "pyyaml>=6.0",
     "requests>=2.31.0",
+    "pyjwt>=2.8.0",
+    "cryptography>=41.0.0",
 ]
 
 [project.optional-dependencies]
