--- a/.github/workflows/dispatch_agents.yml
+++ b/.github/workflows/dispatch_agents.yml
@@ -19,15 +19,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Generate GitHub App Token
-        id: app-token
-        uses: actions/create-github-app-token@v1
-        with:
-          app-id: ${{ secrets.ISSUELAB_APP_ID }}
-          private-key: ${{ secrets.ISSUELAB_APP_PRIVATE_KEY }}
-          owner: gqy22 # 临时强制指定 owner 为 gqy22 进行测试
-          # Token will have access to all repositories where the app is installed
-
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
@@ -35,7 +26,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install PyYAML requests
+          pip install PyYAML requests PyJWT cryptography
 
       - name: Parse mentions from Issue
         if: github.event_name == 'issues'
@@ -64,7 +55,9 @@ jobs:
         id: dispatch
         continue-on-error: true  # 允许部分失败
         env:
-          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+          PYTHONPATH: ${{ github.workspace }}/src
+          GITHUB_APP_ID: ${{ secrets.ISSUELAB_APP_ID }}
+          GITHUB_APP_PRIVATE_KEY: ${{ secrets.ISSUELAB_APP_PRIVATE_KEY }}
         run: |
           # 使用单引号包裹 JSON 以避免 bash 解析问题
           mentions='${{ steps.parse_issue.outputs.mentions || steps.parse_comment.outputs.mentions }}'
@@ -74,7 +67,7 @@ jobs:
             exit 0
           fi
 
-          python scripts/dispatch_to_users.py \
+          python -m issuelab.cli.dispatch \
             --mentions "$mentions" \
             --registry-dir agents/_registry \
             --source-repo "${{ github.repository }}" \
@@ -83,7 +76,8 @@ jobs:
             --issue-body "${{ github.event.issue.body }}" \
             ${{ github.event_name == 'issue_comment' && format('--comment-id {0}', github.event.comment.id) || '' }} \
             ${{ github.event_name == 'issue_comment' && format('--comment-body "{0}"', github.event.comment.body) || '' }} \
-            --labels '${{ steps.labels.outputs.labels }}'
+            --labels '${{ steps.labels.outputs.labels }}' \
+            --use-github-app
 
       - name: Report dispatch results
         if: always() && steps.dispatch.outcome != 'skipped'
