feat: add comprehensive logging and artifact upload for all workflows
- Add LOG_FILE environment variable to all agent execution steps
- Set LOG_LEVEL to DEBUG for detailed debugging information
- Upload logs as GitHub Actions artifacts with 7-day retention
- Apply to orchestrator.yml (/review, /triage, /summarize, auto-review)
- Apply to dispatch_agents.yml (agent dispatch operations)
- Apply to observer.yml (observer auto-trigger scans)
- Apply to user_agent.yml (user fork agent execution)
- All logs are now downloadable from workflow runs page
- Logs are organized by issue number and run ID for easy tracking

--- a/.github/workflows/observer.yml
+++ b/.github/workflows/observer.yml
@@ -75,6 +75,17 @@ jobs:
           ANTHROPIC_BASE_URL: ${{ secrets.ANTHROPIC_BASE_URL }}
           ANTHROPIC_MODEL: ${{ secrets.ANTHROPIC_MODEL }}
           ARXIV_STORAGE_PATH: ${{ github.workspace }}/.arxiv-papers
+          LOG_FILE: ${{ github.workspace }}/logs/observer_${{ github.run_id }}.log
+          LOG_LEVEL: DEBUG
           ENABLE_ARXIV_MCP: true  # 已修复 MCP 超时问题
           ENABLE_GITHUB_MCP: false  # 暂时关闭以测试性能
-          LOG_LEVEL: INFO
+
+      # 上传日志文件
+      - name: Upload logs
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: observer-logs-${{ github.run_id }}
+          path: logs/
+          retention-days: 7
+          if-no-files-found: ignore
