--- a/.github/workflows/user_agent.yml
+++ b/.github/workflows/user_agent.yml
@@ -113,6 +113,16 @@ jobs:
 
           echo "Agent execution completed (placeholder)"
 
+      # 上传日志文件
+      - name: Upload logs
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: user-agent-logs-${{ inputs.issue_number }}-${{ github.run_id }}
+          path: logs/
+          retention-days: 7
+          if-no-files-found: ignore
+
       - name: Comment on config error
         if: failure() && steps.check.outputs.exists == 'false'
         uses: actions/github-script@v7
