perf: disable MCP servers in user agent to speed up execution

--- a/.github/workflows/user_agent.yml
+++ b/.github/workflows/user_agent.yml
@@ -104,6 +104,9 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LOG_FILE: ${{ github.workspace }}/logs/user_agent_${{ inputs.issue_number }}.log
           LOG_LEVEL: DEBUG
+          ENABLE_ARXIV_MCP: "false"
+          ENABLE_GITHUB_MCP: "false"
+          CLAUDE_AGENT_SDK_SKIP_VERSION_CHECK: "true"
         run: |
           echo "Running agent for: ${{ steps.agent.outputs.username }}"
           echo "Source Issue: ${{ inputs.source_repo }}#${{ inputs.issue_number }}"
