refactor: simplify PAT config and set MiniMax defaults
- Rename PERSONAL_GITHUB_TOKEN to PAT_TOKEN for simplicity
- Set default ANTHROPIC_BASE_URL to https://api.minimaxi.com/anthropic
- Set default ANTHROPIC_MODEL to MiniMax-M2.1
- Update all documentation and templates with new variable names
- Keep backward compatibility with || fallback syntax

--- a/.github/workflows/user_agent.yml
+++ b/.github/workflows/user_agent.yml
@@ -100,11 +100,11 @@ jobs:
         id: run_agent
         env:
           ANTHROPIC_AUTH_KEY: ${{ secrets.ANTHROPIC_AUTH_KEY }}
-          ANTHROPIC_BASE_URL: ${{ secrets.ANTHROPIC_BASE_URL }}
-          ANTHROPIC_MODEL: ${{ secrets.ANTHROPIC_MODEL }}
+          ANTHROPIC_BASE_URL: ${{ secrets.ANTHROPIC_BASE_URL || 'https://api.minimaxi.com/anthropic' }}
+          ANTHROPIC_MODEL: ${{ secrets.ANTHROPIC_MODEL || 'MiniMax-M2.1' }}
           # 优先使用用户PAT，fallback到默认token
           # 配置PAT后，回复会显示用户本人而非bot
-          GH_TOKEN: ${{ secrets.PERSONAL_GITHUB_TOKEN || secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.PAT_TOKEN || secrets.GITHUB_TOKEN }}
           LOG_FILE: ${{ github.workspace }}/logs/user_agent_${{ inputs.issue_number }}.log
           LOG_LEVEL: DEBUG
           ENABLE_ARXIV_MCP: "false"
@@ -153,7 +153,7 @@ jobs:
         if: failure() && steps.check.outputs.exists == 'false'
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.PERSONAL_GITHUB_TOKEN || secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.PAT_TOKEN || secrets.GITHUB_TOKEN }}
           script: |
             const [owner, repo] = '${{ inputs.source_repo }}'.split('/');
             await github.rest.issues.createComment({
@@ -167,7 +167,7 @@ jobs:
         if: failure() && steps.check.outputs.exists == 'true'
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.PERSONAL_GITHUB_TOKEN || secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.PAT_TOKEN || secrets.GITHUB_TOKEN }}
           script: |
             const [owner, repo] = '${{ inputs.source_repo }}'.split('/');
             await github.rest.issues.createComment({
