--- a/.github/workflows/arxiv_monitor.yml
+++ b/.github/workflows/arxiv_monitor.yml
@@ -43,7 +43,7 @@ jobs:
           python-version: '3.12'
 
       - name: Install dependencies
-        run: pip install feedparser PyGithub
+        run: uv sync --no-dev
 
       - name: Get last scan time
         id: last_scan
