fix: 修复 orchestrator.yml 中的 Bash 命令注入漏洞
- 问题: 直接将 github.event.comment.body 注入到 Bash 变量导致命令注入
- 影响: 用户评论包含代码或特殊字符时会导致 workflow 失败
- 修复: 使用环境变量传递评论内容，避免 shell 解析
- 位置: detect-mentions job (L105) 和 process-command job (L489)

参考: dispatch_agents.yml 使用临时文件的安全实践

--- a/.github/workflows/orchestrator.yml
+++ b/.github/workflows/orchestrator.yml
@@ -101,8 +101,10 @@ jobs:
     steps:
       - name: Detect built-in agents
         id: detect
+        env:
+          COMMENT_BODY: ${{ github.event.comment.body }}
         run: |
-          COMMENT="${{ github.event.comment.body }}"
+          COMMENT="$COMMENT_BODY"
 
           # 定义内置 Agent 映射（@Mention 别名 -> agent name）
           declare -A AGENT_MAP=(
@@ -485,8 +487,10 @@ jobs:
 
       - name: Extract command
         id: extract
+        env:
+          COMMENT_BODY: ${{ github.event.comment.body }}
         run: |
-          COMMENT="${{ github.event.comment.body }}"
+          COMMENT="$COMMENT_BODY"
           if echo "$COMMENT" | grep -q '/confirm-close'; then
             echo "command=/confirm-close" >> $GITHUB_OUTPUT
           elif echo "$COMMENT" | grep -q '/review'; then
