chore: update pubmed monitor defaults

--- a/.github/workflows/pubmed_monitor.yml
+++ b/.github/workflows/pubmed_monitor.yml
@@ -9,7 +9,7 @@ on:
       query:
         description: 'PubMed 检索词'
         required: false
-        default: '(speciation) OR (hybrid speciation) OR (introgression)'
+        default: '"Speciation"[Mesh] OR "Hybridization, Genetic"[Mesh] OR "Genetic Introgression"[Mesh]'
         type: string
       days:
         description: '追溯天数'
@@ -19,7 +19,7 @@ on:
       max_papers:
         description: '最大文献数（分析前）'
         required: false
-        default: '10'
+        default: '20'
         type: string
 
 concurrency:
@@ -33,7 +33,7 @@ permissions:
 env:
   QUERY: ${{ github.event.inputs.query || '(speciation) OR (hybrid speciation) OR (introgression)' }}
   DAYS: ${{ github.event.inputs.days || '1' }}
-  MAX_PAPERS: ${{ github.event.inputs.max_papers || '10' }}
+  MAX_PAPERS: ${{ github.event.inputs.max_papers || '20' }}
   GH_TOKEN: ${{ secrets.PAT_TOKEN }}
   LOG_LEVEL: DEBUG
   PUBMED_EMAIL: ${{ secrets.PUBMED_EMAIL }}
