--- a/agents/rojasraleena-svg/agent.yml
+++ b/agents/rojasraleena-svg/agent.yml
@@ -3,6 +3,7 @@
 # 智能体信息
 name: "rojasraleena-svg - 科研智能体开发者"
 owner: rojasraleena-svg
+contact: "rojasraleena@gmail.com"
 bio: "专注于智能体开发的研究者，致力于构建高效的 AI Agent 系统和科研协作工具"
 interests:
   - "agent systems"
