--- a/agents/zhang2023-byte/agent.yml
+++ b/agents/zhang2023-byte/agent.yml
@@ -23,7 +23,7 @@ enabled: true                    # 可选：是否启用，默认 true
 # 对话配置（可选，支持 per-agent 覆盖默认值）
 max_turns: 30                    # 可选：最大对话轮数
 max_budget_usd: 10.00            # 可选：最大消耗金额（美元）
-timeout_seconds: 180             # 可选：单次运行超时（秒）
+timeout_seconds: 600            # 可选：单次运行超时（秒），默认 600 (10分钟)
 
 # 功能开关（可选，默认启用）
 enable_skills: true              # 是否加载 Skills（.claude/skills）
