--- a/.github/workflows/dispatch_agents.yml
+++ b/.github/workflows/dispatch_agents.yml
@@ -16,6 +16,7 @@ jobs:
     if: |
       (github.event_name == 'issue_comment' &&
        github.event.issue.state == 'open' &&
+       !contains(github.event.comment.body, '[Agent:') &&
        (contains(github.event.comment.body, '相关人员:') || contains(github.event.comment.body, '协作请求:'))) ||
       (github.event_name == 'issues' &&
        github.event.issue.state == 'open' &&
