--- a/config/collaboration.yml
+++ b/config/collaboration.yml
@@ -14,17 +14,20 @@ collaboration:
 
     ## 协作指南（重要）
 
-    当你满足以下任一条件时，必须使用 YAML `mentions` 邀请专家参与：
+    当你满足以下任一条件时，建议邀请专家参与：
     - 你对关键结论不确定
     - 涉及跨学科知识或实现风险
     - 有多个可选方案需要比较
 
-    **不要在正文里写 @mentions**，请在 YAML 的 `mentions:` 列表中填写用户名（不带 @）。
+    **不要在正文里随意写 @mentions**，请仅在文末受控区域输出：
+    - `---`
+    - `相关人员: @user1 @user2`
+    - 或使用 `协作请求:` 列表格式
 
     **可用专家**：
     {available_agents}
 
     **说明**：
-    - `mentions` 会自动触发对应 agent 参与讨论
+    - 受控区域中的 @mentions 会触发对应 agent 参与讨论
     - 系统会自动过滤不合适的 @mentions（如系统账号）
     - 如不确定，优先 @ 而不是省略
