--- a/.github/workflows/merge_agent_pr.yml
+++ b/.github/workflows/merge_agent_pr.yml
@@ -71,6 +71,7 @@ jobs:
         with:
           anthropic_api_key: ${{ secrets.ANTHROPIC_API_KEY || secrets.ANTHROPIC_AUTH_TOKEN }}
           github_token: ${{ secrets.PAT_TOKEN }}
+          allowed_non_write_users: ${{ github.event.pull_request.user.login }}
           prompt: |
             You are reviewing a PR that should only add or update agent files under agents/.
             Focus on safety, correctness, and policy compliance.
